Completa evaluación final y corrige ejecución